--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bank-of-react",
   "version": "0.1.0",
-  "homepage": "https://johnnylaicode.github.io/bank-of-react-example-code-gh-pages/",
+  "homepage": "https://Lisanishrestha.github.io/my-react-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
